# clip-llm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: KNOWN-ISSUE-eframe-hidden-cpu.md  REQUIREMENTS.md
src/: clipboard.rs  coordinator.rs  diagnostics.rs  hotkey.rs  lib.rs  main.rs  worker.rs
src/api/: client.rs  response.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/ui/: mod.rs  overlay.rs  state_machine.rs
